k8s/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: cpiac_inventory:v5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
