k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scalamarket-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:

          # ----------------------------------------------------------------
          # Frontend: serve il sito statico (HTML client + admin)
          # ----------------------------------------------------------------
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080

          # ----------------------------------------------------------------
          # Auth Service (porta 5001)
          # Rotte Client:  /api/auth/client/register  /api/auth/client/login
          # Rotte Admin:   /api/auth/admin/register   /api/auth/admin/login
          #                /api/auth/admin/users       /api/auth/admin/users/<id>
          # ----------------------------------------------------------------
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 5001

          # ----------------------------------------------------------------
          # Inventory Service (porta 5002)
          # Rotte Client:  /api/inventory/client/catalog
          # Rotte Admin:   /api/inventory/admin/article
          #                /api/inventory/admin/inventory
          #                /api/inventory/admin/internal/allocate
          # ----------------------------------------------------------------
          - path: /api/inventory(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-service
                port:
                  number: 5002

          # ----------------------------------------------------------------
          # Order Service (porta 5003)
          # Rotte Client:  /api/orders/client/order
          #                /api/orders/client/order/<id>
          #                /api/orders/client/order/user/<id>
          # Rotte Admin:   /api/orders/admin/orders
          #                /api/orders/admin/logistics
          # ----------------------------------------------------------------
          - path: /api/orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 5003
